--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>HTML</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -99,7 +99,6 @@
                                 </td>
                                 <td>
                                     Division 3
-                                </td>
                                 </td>
                             </tr>
                             <tr>
