--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </ul>
                         <hr>
                         <h2>Table</h2>
-                        <table rules="rows">
+                        <table>
                             <tr>
                                 <th>
                                     Table Header 1
